methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:6: error: method faireV is defined twice
  conflicting symbols both originated in file 'plm.runtime9.MethodsPicture'
def faireV(){faireV(Color.YELLOW)
    ^